--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="Crazzzy Monster NFTs"
       content="Am NFT Project on the Cronos blockchain"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
